--- a/style.css
+++ b/style.css
@@ -7,3 +7,17 @@ body {
   margin-right:auto;
   border: 5 px;
 }
+
+body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fff0f5;
+      color: #333;
+    }
+
+    header {
+      background-color: #ffb6c1;
+      padding: 20px;
+      text-align: center;
+    }
