--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
       justify-content: space-around;
       gap: 20px;
       margin-top: 40px;
+      flex-wrap: wrap;
     }
 
     .service-options img {
