--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
       width: 100%;
       max-width: 1500px;
       height: auto;
+      display: block;
+      margin: 0 auto;
     }
 
     .service-options {
