--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
       background-color: #fff0f5;
       color: #333;
     }
+contact {
+align:center;
+
+
+}
 
     h2 {
       font-size: 2rem;
