--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-      font-family: Monospace, Monaco;
+      font-family: Serif, Georgia;
       margin: 0;
       padding: 0;
       background-color: #fff0f5;
