--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-      font-family: Serif, Times New Roman;
+      font-family: imes New Roman;
       margin: 0;
       padding: 0;
       background-color: #fff0f5;
