--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-      font-family: imes New Roman;
       margin: 0;
+      font-family: 'Arial', sans-serif;
       padding: 0;
       background-color: #fff0f5;
       color: #333;
