--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h1 {
 }
 
 contact {
+
+}
       
 
     h2 {
@@ -24,7 +26,7 @@ contact {
     }
 
    .main-image {
-      width: 100%;
+      width: 50%;
       max-width: 1500px;
       height: auto;
       display: block;
@@ -40,10 +42,8 @@ contact {
       flex-wrap: wrap; 
     }
 
-    .service-options img {
-      width: 100%;
-      max-width: 400px;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
+    
+
+.toppic {
+      text-align: center;
+}
