--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ contact {
     }
 
    .main-image {
-      width: 50%;
+      width: 50px;
       max-width: 500px;
-      height: 50;
+      height: 50px;
       display: block;
       margin: 0 auto;
     }
