--- a/style.css
+++ b/style.css
@@ -49,6 +49,6 @@ h1 {
   justify-content: center; 
   align-items: center;
   flex-direction: column; 
-  height: 100px; 
+  height: 100vh; 
   text-align: center;
 }
